--- a/ecommerce-project/docker-compose.yml
+++ b/ecommerce-project/docker-compose.yml
@@ -1,25 +1,15 @@
-version: '3.3'
+
+version : '3'
 services:
-  db:
-    image: mysql:5.7
-    restart: always
+  mysql:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
     environment:
-      MYSQL_DATABASE: 'db'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
-      # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: root
     ports:
-      # <Port exposed> : <MySQL Port running inside container>
-      - '3306:3306'
-    expose:
-      # Opens port 3306 on the container
-      - '3306'
-      # Where our data will be persisted
+      - "3306:3306"
     volumes:
-      - my-db:/var/lib/mysql
-# Names our volume
-volumes:
-  my-db:
+      - ./01-create-user.sql:/docker-entrypoint-initdb.d/1.sql
+      - ./create-db.sql:/docker-entrypoint-initdb.d/3.sql
+      - ./02-create-products.sql:/docker-entrypoint-initdb.d/2.sql
+
