--- a/ecommerce-project/02-backend/spring-boot-ecommerce/spring-boot-ecommerce/src/main/resources/application.properties
+++ b/ecommerce-project/02-backend/spring-boot-ecommerce/spring-boot-ecommerce/src/main/resources/application.properties
@@ -6,3 +6,16 @@ spring.datasource.password=ecommerceapp
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.data.rest.base-path=/api
+logging.level.org.hibernate.SQL=trace
+logging.level.net.ttddyy.dsproxy.listener.logging.SLF4JQueryLoggingListener=debug
+# Register P6LogFactory to log JDBC events
+decorator.datasource.p6spy.enable-logging=true
+# Use com.p6spy.engine.spy.appender.MultiLineFormat instead of com.p6spy.engine.spy.appender.SingleLineFormat
+decorator.datasource.p6spy.multiline=true
+# Use logging for default listeners [slf4j, sysout, file, custom]
+decorator.datasource.p6spy.logging=sysout
+# Log file to use (only with logging=file)
+decorator.datasource.p6spy.log-file=spy.log
+decorator.datasource.p6spy.tracing.include-parameter-values=true
+# /api-docs endpoint custom path
+springdoc.api-docs.path=/api-docs
